--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,8 +36,11 @@ jobs:
           changed=$(git diff --name-only origin/main...HEAD | \
             grep -Eo 'services/[^/]+|infra/cdk/stacks/[^/]+' | \
             cut -d '/' -f2 | sort -u | jq -R -s -c 'split("\n") | map(select(length > 0))')
+
           echo "Detected changes: $changed"
-          echo "matrix={\"include\": $(echo "$changed" | jq '[.[] | {service: .}]')}" >> $GITHUB_OUTPUT
+          
+          matrix_json=$(echo "$changed" | jq -c '[.[] | {service: .}]')
+          echo "matrix={\"include\":$matrix_json}" >> $GITHUB_OUTPUT
 
   deploy-pr:
     if: github.event_name == 'pull_request'
@@ -47,6 +50,7 @@ jobs:
       matrix: ${{ fromJson(needs.detect-changes.outputs.matrix) }}
     env:
       PR_NUMBER: ${{ github.event.pull_request.number }}
+
     steps:
       - uses: actions/checkout@v4
 
@@ -56,10 +60,7 @@ jobs:
           python-version: "3.11"
       - run: npm install -g aws-cdk
       - run: pip install -r infra/requirements.txt
-      - run: |
-          if [ -f "services/${{ matrix.service }}/requirements.txt" ]; then
-            pip install -r services/${{ matrix.service }}/requirements.txt
-          fi
+      - run: pip install -r services/${{ matrix.service }}/requirements.txt
 
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v4
@@ -69,11 +70,13 @@ jobs:
 
       - name: Deploy Preview Stack
         run: |
-          PASCAL_CASE_NAME=$(echo "${{ matrix.service }}" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
+          SERVICE_NAME=${{ matrix.service }}
+          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
           STACK_NAME="${PASCAL_CASE_NAME}Stack-pr-${PR_NUMBER}"
+
           echo "Deploying stack: $STACK_NAME"
           cdk deploy "$STACK_NAME" \
-            --app "python3 infra/cdk/stacks/${{ matrix.service }}/app.py" \
+            --app "python3 infra/cdk/stacks/${SERVICE_NAME}/app.py" \
             --context env=pr \
             --context pr_number=${PR_NUMBER} \
             --require-approval never
@@ -84,6 +87,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{ fromJson(needs.detect-changes.outputs.matrix) }}
+
     steps:
       - uses: actions/checkout@v4
 
@@ -93,10 +97,7 @@ jobs:
           python-version: "3.11"
       - run: npm install -g aws-cdk
       - run: pip install -r infra/requirements.txt
-      - run: |
-          if [ -f "services/${{ matrix.service }}/requirements.txt" ]; then
-            pip install -r services/${{ matrix.service }}/requirements.txt
-          fi
+      - run: pip install -r services/${{ matrix.service }}/requirements.txt
 
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v4
@@ -106,11 +107,13 @@ jobs:
 
       - name: Deploy Production Stack
         run: |
-          PASCAL_CASE_NAME=$(echo "${{ matrix.service }}" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
+          SERVICE_NAME=${{ matrix.service }}
+          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
           STACK_NAME="${PASCAL_CASE_NAME}Stack-prod"
+
           echo "Deploying stack: $STACK_NAME"
           cdk deploy "$STACK_NAME" \
-            --app "python3 infra/cdk/stacks/${{ matrix.service }}/app.py" \
+            --app "python3 infra/cdk/stacks/${SERVICE_NAME}/app.py" \
             --context env=prod \
             --require-approval never
 
@@ -122,19 +125,12 @@ jobs:
       matrix: ${{ fromJson(needs.detect-changes.outputs.matrix) }}
     env:
       PR_NUMBER: ${{ github.event.pull_request.number }}
+
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Python and CDK
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
       - run: npm install -g aws-cdk
       - run: pip install -r infra/requirements.txt
-      - run: |
-          if [ -f "services/${{ matrix.service }}/requirements.txt" ]; then
-            pip install -r services/${{ matrix.service }}/requirements.txt
-          fi
+      - run: pip install -r services/${{ matrix.service }}/requirements.txt
 
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v4
@@ -144,7 +140,9 @@ jobs:
 
       - name: Destroy PR Preview Stack
         run: |
-          PASCAL_CASE_NAME=$(echo "${{ matrix.service }}" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
+          SERVICE_NAME=${{ matrix.service }}
+          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
           STACK_NAME="${PASCAL_CASE_NAME}Stack-pr-${PR_NUMBER}"
+
           echo "Destroying stack: $STACK_NAME"
           cdk destroy "$STACK_NAME" --force
