--- a/services/property_service/requirements.txt
+++ b/services/property_service/requirements.txt
@@ -22,3 +22,7 @@ python-dotenv==1.0.1
 
 # --- For packaging or deployment (optional) ---
 mangum==0.17.0
+
+# --- Testing ---
+pytest==8.3.2
+moto[boto3]==5.0.11
