--- a/microfrontends/guest_ui/.gitignore
+++ b/microfrontends/guest_ui/.gitignore
@@ -1,6 +1,26 @@
 .nuxt
 .output
 node_modules
-.env
 dist
-**/*.local
+
+# Env files
+.env
+.env.local
+.env.*.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editors/OS
+.DS_Store
+.idea/
+.vscode/
+Thumbs.db
+
+# Tooling caches
+.cache/
+.parcel-cache/
+.turbo/
